# FormalLanguagesPractice_1

./: .clang-tidy  CMakeLists.txt  README.md  RegexParser.cpp  RegexParser.h  main.cpp
Tests/: MaxPrefixTests.cpp  MaxPrefixTests.h
